refactor(pms): SPU 创建和服务逻辑调整
- PmsSpuCreateAssembler 适配新规格值结构
- PmsSpuServiceImpl 优化商品创建流程